--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-feather": "^6.1.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
